# knot-assigment

./: Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.docker  .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/_scripts/: setup_db.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_15_21_31_7946b32aace6_create_users_table.py  2025_10_15_21_53_a54c4ce1e1f3_create_contacts_table.py  2025_10_16_01_47_7274974d5601_create_contact_history_tables.py
backend/backend/: app.py  settings.py
backend/backend/api/: routes.py  user.py
backend/backend/db/: connection.py
backend/backend/managers/: base.py  contact.py  user.py
backend/backend/models/canonical/: base.py  contact.py  user.py
backend/backend/models/orm/: base.py  contact.py  user.py
backend/backend/schemas/: user.py
backend/knot_backend/: app.py  settings.py
backend/knot_backend/api/: contact.py  exceptions.py  routes.py  user.py
backend/knot_backend/db/: connection.py
backend/knot_backend/logging/: logger.py
backend/knot_backend/managers/: base.py  contact.py  contact_history.py  user.py
backend/knot_backend/models/canonical/: base.py  contact.py  user.py
backend/knot_backend/models/orm/: contact.py  contact_history.py  user.py
backend/knot_backend/schemas/: base.py  contact.py  user.py
frontend/: .dockerignore  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/client/: api.ts
frontend/src/components/: Contacts.tsx  User.tsx
