[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["JoseAngel1196 <joseangel1196@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13.4"
fastapi = "^0.119.0"
starlette = "^0.48.0"
uvicorn = "^0.37.0"
uvloop = "^0.21.0"
python-dotenv = "^1.1.1"
pydantic = "^2.12.2"
sqlalchemy = "^2.0.44"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
